Fix header on small screens (fixes #43)

--- a/_components/minimal-header.css
+++ b/_components/minimal-header.css
@@ -10,11 +10,10 @@
 .tool-header-name,
 .minimal-header-name {
   font-size: 1.125em;
-  white-space: nowrap;
 }
 .minimal-header.with-subtitle .minimal-header-name {
   line-height: 1.1;
-  font-size: 1.2em;
+  font-size: 1em;
 }
 @media (min-width: 60em) {
   .tool-header-name,
@@ -34,6 +33,7 @@
   margin-left: auto;
   display: flex;
   align-items: center;
+  align-self: start;
 }
 .tool-header-logo img,
 .minimal-header-logo img {
